# django-invoke

./: Makefile  pyproject.toml  tasks.py
src/django_invoke/: __init__.py  _config.py  django.py
