[project]
name = "django-invoke"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hoangquochung1110", email = "arsenalforeversince2007@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "invoke>=2.2.0",
    "rich>=13.9.4",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "django>=4.2.19",
]
