[project]
name = "django-invoke"
version = "0.0.2"
description = "Collection of frequently used tasks for Django development"
readme = "README.md"
authors = [
    { name = "hoangquochung1110", email = "arsenalforeversince2007@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "invoke>=2.2.0",
    "rich>=13.9.4",
]
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"

[project.urls]
Repository = "https://github.com/hoangquochung1110/django-invoke"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "django>=4.2.19",
]
